--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@font-face {
+/* @font-face {
   font-family: Netflix-sans;
   src: url("../public/fonts/NetflixSansBlack.ttf"),
     url("../public/fonts/NetflixSansBold.ttf"),
@@ -7,6 +7,39 @@
     url("../public/fonts/NetflixSansMedium.ttf"),
     url("../public/fonts/NetflixSansRegular.ttf"),
     url("../public/fonts/NetflixSansThin.ttf");
+} */
+@font-face {
+  font-family: "Netflix-sans";
+  src: url("../public/fonts/NetflixSansMedium.ttf"), format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Netflix-sans";
+  src: url("../public/fonts/NetflixSansLight.ttf") format("truetype");
+  font-weight: normal;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "Netflix-sans";
+  src: url("../public/fonts/NetflixSansBold.ttf") format("truetype");
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Netflix-sans";
+  src: url("../public/fonts/NetflixSansBlack.ttf") format("truetype");
+  font-weight: bold;
+  font-style: italic;
+}
+@font-face {
+  font-family: "Netflix-sans";
+  src: url("../public/fonts/NetflixSansThin.ttf") format("truetype");
+  font-weight: normal;
+  font-style: thin;
 }
 :root {
   --principal: rgb(20, 20, 20);
@@ -15,7 +48,7 @@
   --boton: rgb(96, 94, 92);
   --text-color: rgb(255, 255, 255);
   --text-logo: "Bebas Neue", cursive;
-  --text-body: Netflix-sans;
+  --text-body: Netflix-sans, thin;
 }
 *,
 *::after,
