--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,4 @@
 /*--------------------- Global ---------------------------*/
-.active {
-  font-weight: bold;
-  color: #c2c2c2 !important;
-}
 img {
   height: auto;
   width: 100%;
@@ -10,15 +6,14 @@ img {
 /*--------------------- Navbar ---------------------------*/
 .background-bar-pri {
   background-color: var(--principal);
-  transition: background-color 3s;
-  -webkit-transition: background-color 3s;
-  -moz-transition: background-color 3s;
-  -ms-transition: background-color 3s;
-  -o-transition: background-color 3s;
+  transition: background-color 0.6s;
+  -webkit-transition: background-color 0.6s;
+  -moz-transition: background-color 0.6s;
+  -ms-transition: background-color 0.6s;
+  -o-transition: background-color 0.6s;
 }
 .container-bar {
-  background-color: transparent;
-  transition: background-color 3s;
+  transition: background-color 1s;
   position: fixed;
   font-weight: thin;
   width: 100%;
@@ -29,10 +24,10 @@ img {
   grid-template-columns: auto 1fr auto;
   gap: 2.5rem;
   align-items: center;
-  -webkit-transition: background-color 3s;
-  -moz-transition: background-color 3s;
-  -ms-transition: background-color 3s;
-  -o-transition: background-color 3s;
+  -webkit-transition: background-color 1s;
+  -moz-transition: background-color 1s;
+  -ms-transition: background-color 1s;
+  -o-transition: background-color 1s;
 }
 .container-bar ul {
   list-style: none;
@@ -43,6 +38,13 @@ img {
 .container-bar a {
   color: var(--text-color);
   text-decoration: none;
+}
+#navbar ul li a:hover {
+  color: #c2c2c2;
+}
+.active {
+  font-weight: bold;
+  color: var(--text-color) !important;
 }
 .logo {
   color: var(--rojo);
@@ -59,6 +61,7 @@ img {
 .icons span {
   font-size: 1.5rem;
   overflow: hidden;
+  cursor: pointer;
 }
 .icons a:last-child {
   display: grid;
@@ -106,6 +109,7 @@ img {
 }
 .btn-play,
 .btn-info {
+  cursor: pointer;
   margin-top: 2%;
   margin-right: 10px;
   padding: 7px 20px;
@@ -134,6 +138,13 @@ img {
   background-color: rgba(161, 161, 161, 0.7);
   color: var(--text-color);
 }
+.btn-play:hover {
+  background-color: rgb(230, 227, 227);
+}
+.btn-info:hover {
+  background-color: rgba(161, 161, 161, 0.6);
+  color: var(--text-color);
+}
 /*-------------------- All Movies ------------------------*/
 .container-genre {
   display: grid;
@@ -149,6 +160,9 @@ img {
   grid-template-columns: repeat(20, 240px);
   gap: 4px;
   padding-left: 3vw;
+}
+.movies img {
+  cursor: pointer;
 }
 /*--------------------------------------------------------*/
 /*--------------------------------------------------------*/
