--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,11 @@ img {
   height: auto;
   width: 100%;
 }
+i,
+h2,
+figcaption {
+  cursor: context-menu;
+}
 /*--------------------- Navbar ---------------------------*/
 .background-bar-pri {
   background-color: var(--principal);
@@ -13,21 +18,21 @@ img {
   -o-transition: background-color 0.6s;
 }
 .container-bar {
-  transition: background-color 1s;
   position: fixed;
   font-weight: thin;
   width: 100%;
   font-size: 0.9vw;
   padding: 0 4%;
-  height: 60px;
+  height: 68px;
   display: grid;
   grid-template-columns: auto 1fr auto;
   gap: 2.5rem;
   align-items: center;
-  -webkit-transition: background-color 1s;
-  -moz-transition: background-color 1s;
-  -ms-transition: background-color 1s;
-  -o-transition: background-color 1s;
+  transition: background-color 0.8s;
+  -webkit-transition: background-color 0.8s;
+  -moz-transition: background-color 0.8s;
+  -ms-transition: background-color 0.8s;
+  -o-transition: background-color 0.8s;
 }
 .container-bar ul {
   list-style: none;
@@ -62,6 +67,7 @@ img {
   font-size: 1.5rem;
   overflow: hidden;
   cursor: pointer;
+  font-weight: bold;
 }
 .icons a:last-child {
   display: grid;
@@ -85,7 +91,7 @@ img {
   right: -50px;
   width: 150%;
   height: 100%;
-  box-shadow: 0px -10px 50px var(--principal) inset,
+  box-shadow: 0px -100px 50px var(--principal) inset,
     0px 3px 50px var(--principal) inset;
 }
 .genres-movie {
@@ -122,6 +128,7 @@ img {
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
+  z-index: 1 !important;
 }
 .btn-play p,
 .btn-info p {
@@ -134,6 +141,7 @@ img {
   margin-right: 0.9vw;
   font-size: 2.1vw;
   overflow: hidden;
+  font-weight: bold;
 }
 .btn-info {
   background-color: rgba(161, 161, 161, 0.7);
@@ -147,23 +155,92 @@ img {
   color: var(--text-color);
 }
 /*-------------------- All Movies ------------------------*/
-.container-genre {
+.all-movies {
   display: grid;
-  grid-template-rows: repeat(19, auto 170px);
+  grid-template-rows: auto;
+  gap: 35px;
 }
-/* h2 */
-.genre {
-  padding: 5px 3vw;
-  font-size: 1.6vw;
+.container-genre {
+  position: relative;
+  display: grid;
+  grid-template-rows: auto;
 }
 .movies {
   display: grid;
-  grid-template-columns: repeat(20, 240px);
-  gap: 4px;
-  padding-left: 3vw;
+  grid-template-columns: repeat(20, calc((92vw - (8px * 6)) / 5));
+  gap: 0 8px;
+  padding: 0 4vw;
 }
+/* h2 */
+.genre {
+  padding: 5px 4vw;
+  font-size: 1.6vw;
+}
+/* cards */
 .movies img {
   cursor: pointer;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+#next,
+#prev {
+  position: absolute;
+  background-color: var(--principalobs);
+  border: none;
+  bottom: 2px;
+  width: 3.5vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+#prev {
+  display: none;
+  left: 0;
+  border-radius: 0 10px 10px 0;
+  -webkit-border-radius: 0 10px 10px 0;
+  -moz-border-radius: 0 10px 10px 0;
+  -ms-border-radius: 0 10px 10px 0;
+  -o-border-radius: 0 10px 10px 0;
+}
+#next {
+  right: 0;
+  border-radius: 10px 0 0 10px;
+  -webkit-border-radius: 10px 0 0 10px;
+  -moz-border-radius: 10px 0 0 10px;
+  -ms-border-radius: 10px 0 0 10px;
+  -o-border-radius: 10px 0 0 10px;
+}
+.movies:hover ~ #next span,
+.movies:hover ~ #prev span {
+  display: block;
+}
+#next:hover,
+#prev:hover {
+  background-color: rgb(20, 20, 20, 0.7);
+}
+#next:hover span,
+#prev:hover span {
+  transform: scaleY(2);
+  -webkit-transform: scaleY(2);
+  -moz-transform: scaleY(2);
+  -ms-transform: scaleY(2);
+  -o-transform: scaleY(2);
+}
+#next span,
+#prev span {
+  display: none;
+  overflow: hidden;
+  color: var(--text-color);
+  font-weight: bold;
+  transform: scaleY(1.5);
+  -webkit-transform: scaleY(1.5);
+  -moz-transform: scaleY(1.5);
+  -ms-transform: scaleY(1.5);
+  -o-transform: scaleY(1.5);
 }
 /*--------------------------------------------------------*/
 /*--------------------------------------------------------*/
@@ -183,7 +260,7 @@ img {
   margin-top: 20px;
   position: relative;
 }
-footer > p {
+footer > i {
   position: absolute;
   right: 10px;
   font-size: 14px;
@@ -195,8 +272,15 @@ footer > p {
   display: flex;
   align-items: center;
 }
+.card-tmdb::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
 .card-tmdb figcaption {
   width: 80%;
+  z-index: 1;
 }
 .card-tmdb figcaption a {
   color: var(--rojo);
