--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,7 @@ figcaption {
   grid-template-columns: auto 1fr auto;
   gap: 2.5rem;
   align-items: center;
+  z-index: 1;
   transition: background-color 0.8s;
   -webkit-transition: background-color 0.8s;
   -moz-transition: background-color 0.8s;
@@ -59,10 +60,43 @@ figcaption {
 }
 .icons {
   display: grid;
-  grid-template-columns: repeat(2, 32px) auto;
+  grid-template-columns: auto 32px auto;
   gap: 1.2rem;
+  justify-items: center;
   align-items: center;
 }
+#search {
+  color: var(--text-color);
+  background-color: transparent;
+  border: none;
+}
+/* .card-filter {
+  border: none;
+  height: 36px;
+  width: 36px;
+  border-radius: 18px;
+  padding-left: 36px;
+  -webkit-border-radius: 18px;
+  -moz-border-radius: 18px;
+  -ms-border-radius: 18px;
+  -o-border-radius: 18px;
+  background: url(./assets/lupa.png) no-repeat 10px/16px, white;
+  cursor: pointer;
+  transition-property: width, border-radius, box-shadow;
+  transition-duration: 300ms;
+  box-shadow: 0 0 0 2px var(--amarillo);
+}
+.card-filter:focus,
+.card-filter:not(:placeholder-shown) {
+  width: 200px;
+  border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+  outline: none;
+  cursor: auto;
+} */
 .icons span {
   font-size: 1.5rem;
   overflow: hidden;
@@ -72,6 +106,31 @@ figcaption {
 .icons a:last-child {
   display: grid;
   grid-template-columns: repeat(2, 32px);
+  justify-items: center;
+  align-items: center;
+  overflow: hidden;
+}
+.icons a:last-child:hover span {
+  transform: rotate(180deg);
+  -webkit-transform: rotate(180deg);
+  -moz-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  -o-transform: rotate(180deg);
+  transition: transform 0.6s;
+  -webkit-transition: transform 0.6s;
+  -moz-transition: transform 0.6s;
+  -ms-transition: transform 0.6s;
+  -o-transition: transform 0.6s;
+}
+.icons a:last-child:hover {
+  height: 68px;
+}
+.icons a:last-child:not(:hover) span {
+  transition: transform 0.6s;
+  -webkit-transition: transform 0.6s;
+  -moz-transition: transform 0.6s;
+  -ms-transition: transform 0.6s;
+  -o-transition: transform 0.6s;
 }
 .border {
   border-radius: 11%;
@@ -128,7 +187,6 @@ figcaption {
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
-  z-index: 1 !important;
 }
 .btn-play p,
 .btn-info p {
@@ -191,7 +249,7 @@ figcaption {
   background-color: var(--principalobs);
   border: none;
   bottom: 2px;
-  width: 3.5vw;
+  width: calc(4vw - 8px);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -200,19 +258,19 @@ figcaption {
 #prev {
   display: none;
   left: 0;
-  border-radius: 0 10px 10px 0;
-  -webkit-border-radius: 0 10px 10px 0;
-  -moz-border-radius: 0 10px 10px 0;
-  -ms-border-radius: 0 10px 10px 0;
-  -o-border-radius: 0 10px 10px 0;
+  border-radius: 0 7px 7px 0;
+  -webkit-border-radius: 0 7px 7px 0;
+  -moz-border-radius: 0 7px 7px 0;
+  -ms-border-radius: 0 7px 7px 0;
+  -o-border-radius: 0 7px 7px 0;
 }
 #next {
   right: 0;
-  border-radius: 10px 0 0 10px;
-  -webkit-border-radius: 10px 0 0 10px;
-  -moz-border-radius: 10px 0 0 10px;
-  -ms-border-radius: 10px 0 0 10px;
-  -o-border-radius: 10px 0 0 10px;
+  border-radius: 7px 0 0 7px;
+  -webkit-border-radius: 7px 0 0 7px;
+  -moz-border-radius: 7px 0 0 7px;
+  -ms-border-radius: 7px 0 0 7px;
+  -o-border-radius: 7px 0 0 7px;
 }
 .movies:hover ~ #next span,
 .movies:hover ~ #prev span {
@@ -280,7 +338,6 @@ footer > i {
 }
 .card-tmdb figcaption {
   width: 80%;
-  z-index: 1;
 }
 .card-tmdb figcaption a {
   color: var(--rojo);
@@ -296,6 +353,12 @@ footer > i {
   .container-bar {
     height: 40px;
   }
+  .icons a:last-child:hover {
+    height: 40px;
+  }
+  /* .icons a:last-child span {
+    display: none;
+  } */
   .genres-movie {
     padding-top: 40px;
   }
