--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ figcaption {
   cursor: context-menu;
 }
 .invisible {
-  display: none;
+  display: none !important;
 }
 /*--------------------- Navbar ---------------------------*/
 .background-bar-pri {
@@ -21,6 +21,7 @@ figcaption {
   -o-transition: background-color 0.6s;
 }
 .container-bar {
+  overflow-x: visible;
   position: fixed;
   font-weight: thin;
   width: 100%;
@@ -41,14 +42,12 @@ figcaption {
 .wrapper {
   border-top: 2px solid white;
   position: absolute;
-  top: 50px;
-  left: 5%;
+  top: 78px;
   display: grid;
   grid-template-rows: repeat(5, 45px);
   gap: 0;
   width: 250px;
   list-style: none;
-  overflow: hidden;
   background: rgba(0, 0, 0, 0.8);
   transition: all 0.3s ease;
   padding: 0;
@@ -140,14 +139,34 @@ ul.wrapper::before {
   cursor: pointer;
   font-weight: bold;
 }
-.icons a:last-child {
+.options {
   display: grid;
   grid-template-columns: 32px auto;
   justify-items: center;
   align-items: center;
   overflow: hidden;
 }
-.icons a:last-child:hover span {
+.wrapper a {
+  position: relative;
+  color: var(--text-color);
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+}
+.wrapper::before {
+  content: "";
+  position: absolute;
+  left: calc(90% - (12px / 2));
+  top: -12px;
+  display: inline-block;
+  border-right: 10px solid transparent;
+  border-bottom: 12px solid white;
+  border-left: 10px solid transparent;
+  z-index: -1;
+}
+#options:hover .options span {
   transform: rotate(180deg);
   -webkit-transform: rotate(180deg);
   -moz-transform: rotate(180deg);
@@ -159,12 +178,13 @@ ul.wrapper::before {
   -ms-transition: transform 0.6s;
   -o-transition: transform 0.6s;
 }
-.icons a:last-child:not(:hover) span {
+#options:not(:hover) .options span {
   transition: transform 0.6s;
   -webkit-transition: transform 0.6s;
   -moz-transition: transform 0.6s;
   -ms-transition: transform 0.6s;
   -o-transition: transform 0.6s;
+  transition-delay: 0.3s;
 }
 .border {
   border-radius: 11%;
@@ -388,11 +408,14 @@ footer > i {
     height: 40px;
     gap: 1.5rem;
   }
-  .icons a:last-child span {
+  .options span {
     display: none;
   }
   .genres-movie {
     padding-top: 40px;
+  }
+  .wrapper {
+    top: 50px;
   }
 }
 @media (min-width: 885px) {
@@ -406,7 +429,6 @@ footer > i {
 @media (max-width: 885px) {
   .container-bar {
     font-size: 0.8rem;
-    overflow-x: visible;
   }
   .drop-btn {
     font-size: 0.6rem;
