--- a/src/App.css
+++ b/src/App.css
@@ -139,6 +139,73 @@ ul.wrapper::before {
   cursor: pointer;
   font-weight: bold;
 }
+#news .wrapper {
+  display: grid;
+  grid-template-rows: repeat(5, 100px);
+  gap: 0;
+  height: 50vh;
+  width: 350px;
+  overflow: visible;
+  overflow-y: auto;
+}
+#options .wrapper {
+  display: grid;
+  grid-template-rows: repeat(3, auto);
+  width: 200px;
+}
+.content-users {
+  padding-top: 15px;
+  padding-bottom: 5px;
+  border-bottom: 1px solid rgba(250, 250, 250, 0.5);
+}
+.closet-sesion {
+  padding: 15px 0;
+}
+.closet-sesion:hover {
+  text-decoration: underline;
+}
+.options-user {
+  display: grid;
+  grid-template-columns: 20% 80%;
+  gap: 20px;
+  padding: 0 10px 10px;
+  align-items: center;
+  cursor: pointer;
+}
+.options-user figcaption a {
+  display: flex;
+  justify-content: flex-start;
+}
+.options-user span {
+  display: grid;
+  justify-content: center;
+}
+.options-user:hover figcaption a,
+.options-user:hover figcaption p {
+  text-decoration: underline;
+  cursor: pointer;
+}
+.new-movie {
+  display: grid;
+  grid-template-columns: 35% 65%;
+  gap: 20px;
+  padding: 20px;
+  cursor: pointer;
+  border-bottom: 1px solid rgba(250, 250, 250, 0.5);
+}
+.new-movie figcaption p {
+  font-size: 16px;
+  cursor: pointer;
+}
+.new-movie figcaption span {
+  font-size: 12px;
+  font-weight: normal;
+  color: #a3a2a2;
+  cursor: pointer;
+}
+.new-movie:hover {
+  background-color: black;
+}
 .options {
   display: grid;
   grid-template-columns: 32px auto;
@@ -158,13 +225,12 @@ ul.wrapper::before {
 .wrapper::before {
   content: "";
   position: absolute;
-  left: calc(90% - (12px / 2));
+  left: calc(94% - (12px / 2));
   top: -12px;
-  display: inline-block;
+  display: inline;
   border-right: 10px solid transparent;
   border-bottom: 12px solid white;
   border-left: 10px solid transparent;
-  z-index: -1;
 }
 #options:hover .options span {
   transform: rotate(180deg);
