--- a/src/App.css
+++ b/src/App.css
@@ -312,9 +312,8 @@ ul.wrapper::before {
   font-weight: bold;
   padding-bottom: 18px;
 }
-.first-page > div {
+.first-page form {
   width: 80%;
-  height: 60px;
   display: grid;
   grid-template-columns: 1fr 30%;
   gap: 1px;
@@ -322,7 +321,7 @@ ul.wrapper::before {
 .form-email {
   position: relative;
   width: 100%;
-  height: 100%;
+  height: 60px;
   background-color: var(--text-color);
 }
 .form-email input[type="email"] {
@@ -335,6 +334,7 @@ ul.wrapper::before {
   border: none;
   outline: none;
   font-size: 1rem;
+  background-color: transparent;
 }
 .form-email p {
   position: absolute;
@@ -351,8 +351,13 @@ ul.wrapper::before {
   top: calc(8px - 0.6rem / 2);
   font-size: 0.8rem;
   font-weight: bold;
+  z-index: 0;
 }
-.first-page div button {
+.form-email input:focus,
+.form-email input:not(:placeholder-shown) {
+  z-index: 1;
+}
+.first-page form button {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -360,8 +365,16 @@ ul.wrapper::before {
   font-size: 1rem;
   cursor: pointer;
 }
-.first-page div button span {
+.first-page form button span {
   overflow: hidden;
+}
+
+.first-page form > span {
+  text-align-last: left;
+  font-size: 0.82rem;
+  color: rgb(255, 115, 35);
+  font-weight: bold;
+  height: 20px;
 }
 /*--------------------- Inicio ---------------------------*/
 .intro {
@@ -619,15 +632,18 @@ footer > i {
   .first-page p {
     font-size: 0.7em;
   }
-  .first-page > div {
+  .first-page form {
     height: auto;
     grid-template-columns: auto;
-    grid-template-rows: 70px auto;
-    gap: 30px;
+    grid-template-rows: repeat(3, auto);
   }
-  .first-page div button {
+  .first-page form button {
     width: min-content;
     justify-self: center;
+  }
+  .first-page form > span {
+    font-size: 0.75rem;
+    grid-row-start: 2;
   }
 }
 @media (max-width: 560px) {
