--- a/src/App.css
+++ b/src/App.css
@@ -395,6 +395,69 @@ form#form-login .form-email {
 form#form-login .form-email input {
   color: var(--text-color);
 }
+form#form-login > span {
+  font-size: 0.82rem;
+  color: rgb(255, 115, 35);
+  font-weight: bold;
+  height: 20px;
+  display: block;
+}
+form#form-login .form-email input[type="text"],
+form#form-login .form-email input[type="password"] {
+  left: 10px;
+  width: 100%;
+}
+form#form-login .form-email p {
+  left: 15px;
+}
+form#form-login > a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 60px;
+  text-decoration: none;
+  font-weight: bold;
+  margin: 15px 0;
+}
+form#form-login > label {
+  font-size: 0.9rem;
+  padding-left: 5px;
+  vertical-align: text-top;
+}
+input[type="checkbox"] {
+  height: 1.2em;
+  width: 1.2em;
+  accent-color: rgb(151, 151, 151);
+}
+form#form-login > p {
+  display: inline-flex;
+  float: right;
+  font-size: 0.9rem;
+}
+form#form-login > p:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+form#form-login h4 {
+  margin-top: 35px;
+  font-weight: normal;
+  color: #a3a2a2;
+}
+form#form-login h4 > a {
+  text-decoration: none;
+  color: var(--text-color);
+  font-weight: bold;
+  margin-left: 5px;
+}
+form#form-login h4 > a:hover {
+  text-decoration: underline;
+}
+form#form-login h6 {
+  margin-top: 15px;
+  font-size: 1rem;
+  font-weight: normal;
+  color: var(--text-color);
+}
 /*--------------------- Inicio ---------------------------*/
 .intro {
   position: absolute;
